Fixed table headers in dark mode

--- a/javascript/src/frontend/collab_forms/editor.scss
+++ b/javascript/src/frontend/collab_forms/editor.scss
@@ -205,6 +205,10 @@
         }
     }
 
+    [data-theme="dark"] & table th p {
+        color: #000;
+    }
+
     .tableWrapper {
         margin: 1.5rem 0;
         overflow-x: auto;
